[workspace]
members = [
	".",
	"evaltrees-cli",
]

[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "A simple term-rewriting interpreter that displays intermediate expressions."
license = "Apache-2.0/MIT"
name = "evaltrees"
version = "0.0.1"

[dependencies]
display_attr = "0.1.1"
either = "1.5.0"
failure = "0.1.1"
lalrpop-util = "0.15.2"
lazy_static = "1.0.1"
linked_hash_set = "0.1.3"
log = "0.4.1"
regex = "1.0.0"
symbol = "0.1.2"

[build-dependencies]
lalrpop = "0.15.2"
