[workspace]
members = [".", "evaltrees-cli"]

[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "A simple term-rewriting interpreter that displays intermediate expressions."
documentation = "https://github.com/remexre/evaltrees/tree/master/doc"
homepage = "https://github.com/remexre/evaltrees"
license = "Apache-2.0/MIT"
name = "evaltrees"
repository = "https://github.com/remexre/evaltrees"
version = "0.2.0-pre"

[dependencies]
display_attr = "0.1.1"
either = "1.5.0"
failure = "0.1.1"
lalrpop-util = "0.16.0"
lazy_static = "1.0.1"
linked_hash_set = "0.1.3"
log = "0.4.1"
regex = "1.0.0"
symbol = "0.1.4"
petgraph = "0.4.12"

[build-dependencies]
lalrpop = "0.16.0"

[dev-dependencies]
pretty_assertions = "0.5.1"
