[workspace]
members = [".", "evaltrees-cli"]

[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "A simple term-rewriting interpreter that displays intermediate expressions."
documentation = "https://github.com/remexre/evaltrees/tree/master/doc"
homepage = "https://github.com/remexre/evaltrees"
license = "Apache-2.0/MIT"
name = "evaltrees"
repository = "https://github.com/remexre/evaltrees"
version = "0.2.0-pre"

[dependencies]
display_attr = "0.1.1"
either = "1.5.2"
failure = "0.1.5"
lalrpop-util = "0.19.4"
lazy_static = "1.3.0"
linked_hash_set = "0.1.3"
log = "0.4.6"
regex = "1.1.5"
symbol = "0.1.7"
petgraph = "0.5.1"

[build-dependencies]
lalrpop = "0.19.4"

[dev-dependencies]
pretty_assertions = "0.6.1"
