[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "The command-line front-end to evaltrees."
edition = "2018"
license = "Apache-2.0/MIT"
name = "evaltrees-cli"
version = "0.1.0"

[dependencies]
evaltrees = { path = ".." }
failure = "0.1.8"
human-panic = "1.0.0"
linefeed = "0.6.0"
log = "0.4.2"
stderrlog = "0.5.1"
structopt = "0.3.21"
symbol = "0.1.2"
