[workspace]
members = ["."]

[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "WebAssembly bindings to evaltrees"
license = "Apache-2.0/MIT"
name = "evaltrees-wasm"
version = "0.1.0"

[dependencies]
evaltrees = { path = "../.." }
futures = "0.2.1"
wasm-bindgen = "0.2.11"

[lib]
crate-type = ["cdylib"]
